--- a/index.html
+++ b/index.html
@@ -3,44 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Função Quest - Aprendendo Funções Matemáticas</title>
+    <title>Função Quest</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="game-container">
+        <!-- Tela Inicial -->
         <div id="menu-screen" class="screen">
             <h1>Função Quest</h1>
-            <p>Aventure-se no mundo das funções matemáticas!</p>
+            <p>Aprenda matemática jogando!</p>
             <button id="start-btn">Começar Jogo</button>
             <button id="tutorial-btn">Tutorial</button>
         </div>
 
+        <!-- Tela de Jogo -->
         <div id="game-screen" class="screen hidden">
-            <div id="question-container">
-                <h2 id="question-text"></h2>
+            <div id="stats">
+                <div id="score">Pontos: <span>0</span></div>
+                <div id="lives">Vidas: <span>3</span> ❤️</div>
+            </div>
+            
+            <div id="question-box">
+                <h2 id="question-text">Pergunta carregando...</h2>
                 <div id="options-container"></div>
             </div>
-            <div id="feedback"></div>
-            <div id="score">Pontuação: <span id="score-value">0</span></div>
-            <div id="lives">Vidas: <span id="lives-value">3</span> ❤️</div>
+            
+            <div id="feedback" class="feedback-box"></div>
+            <button id="next-btn" class="hidden">Próxima Pergunta</button>
         </div>
 
+        <!-- Tela de Tutorial -->
         <div id="tutorial-screen" class="screen hidden">
-            <h2>Tutorial</h2>
-            <p>Neste jogo, você aprenderá sobre:</p>
-            <ul>
-                <li>Funções Injetoras</li>
-                <li>Funções Sobrejetoras</li>
-                <li>Funções Bijetoras</li>
-                <li>Funções Compostas e Inversas</li>
-            </ul>
-            <p>Responda corretamente para avançar e ganhar pontos!</p>
-            <button id="back-btn">Voltar ao Menu</button>
+            <h2>Como Jogar</h2>
+            <div class="tutorial-content">
+                <p>Responda corretamente as questões sobre:</p>
+                <ul>
+                    <li>Funções injetoras</li>
+                    <li>Funções sobrejetoras</li>
+                    <li>Funções bijetoras</li>
+                </ul>
+            </div>
+            <button id="back-btn">Voltar</button>
         </div>
 
+        <!-- Tela de Game Over -->
         <div id="game-over-screen" class="screen hidden">
             <h2>Fim de Jogo!</h2>
-            <p>Sua pontuação final: <span id="final-score">0</span></p>
+            <p>Sua pontuação: <span id="final-score">0</span></p>
             <button id="restart-btn">Jogar Novamente</button>
         </div>
     </div>
